--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "miniblog",
+  "name": "counterPoints",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
+    "react-swipeable-list": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
